[package]
name = "crates-io-proxy"
description = "Caching HTTP proxy server for the crates.io registry"
version = "0.2.5"
authors = ["Sergey Kvachonok <ravenexp@gmail.com>"]
edition = "2021"
homepage = "https://github.com/ravenexp/crates-io-proxy"
repository = "https://github.com/ravenexp/crates-io-proxy"
license = "MIT OR Apache-2.0"
keywords = ["crates", "cargo", "registry", "proxy", "cache"]
categories = ["development-tools", "caching", "web-programming::http-server"]
readme = "README.md"

[features]
native-certs = ["dep:rustls", "dep:rustls-native-certs"]

[dependencies]
tiny_http = "0.12"
httpdate = "1.0"
url = "2.5"
ureq = "2.12"
pico-args = { version = "0.5", features = ["combined-flags"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std"] }
rustls-native-certs = { version = "0.7", optional = true }

[profile.release]
lto = true
strip = "debuginfo"
